# rex-rust

./: LICENSE
rex-ucph/: Cargo.toml  README.md  build.sh
rex-ucph/src/: lib.rs
rusttest/: Cargo.toml
rusttest/src/: main.rs
